correcoes de erros

--- a/bicicleta.html
+++ b/bicicleta.html
@@ -43,10 +43,10 @@
                <h2>Nimbus Stark</h2>
                <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                <ul>
-                  <li> <img src="../img/icones/eletrica.svg"> <span>Motor eletrico</span></li>
-                  <li><img src="../img/icones/carbono.svg"> <span>Fibra de Carbono</span></li>
-                  <li><img src="../img/icones/velocidade.svg"> <span>50 km/h </span></li>
-                  <li><img src="../img/icones/rastreador.svg"> <span>Rastreador</span></li>
+                  <li> <img src="./img/icones/eletrica.svg"> <span>Motor eletrico</span></li>
+                  <li><img src="./img/icones/carbono.svg"> <span>Fibra de Carbono</span></li>
+                  <li><img src="./img/icones/velocidade.svg"> <span>50 km/h </span></li>
+                  <li><img src="./img/icones/rastreador.svg"> <span>Rastreador</span></li>
                </ul>
                <a href="./bicicletas/nimbus.html" class="botao seta">Mais sobre</a>
             </div>
