--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -97,7 +97,7 @@
          </li>
       </ul>
    </article>
-   <article class="seguro-bg">
+   <article class="seguro-bg2">
       <div class="seguro container">
          <div class="seguro-imagem">
             <img src="../img/fotos/seguros.jpg" alt="Pessoa em cima de uma bicicleta">
