--- a/seguro.html
+++ b/seguro.html
@@ -34,8 +34,8 @@
             <h1>você seguro<span class="cor-p1">.</span></h1>
          </div>
       </div>
-      <div class="seguros container">
-         <div class="seguros-item">
+      <div class="seguro2 container">
+         <div class="seguros2-item">
             <h3>Prata</h3>
             <span>R$ 199
                <span class="mensal">mensal</span>
@@ -48,7 +48,7 @@
             </ul>
             <a href="" class="botao secundario">Inscreva-se</a>
          </div>
-         <div class="seguros-item">
+         <div class="seguros2-item">
             <h3 class="ouro">Ouro</h3>
             <span>R$ 299
                <span class="mensal">mensal</span>
