--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -6,10 +6,14 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Projeto Final</title>
-   <link rel="stylesheet" href="../css/main.css">
+   <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+   <link rel="stylesheet" href="../css/main.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+   <script>document.documentElement.classList.add('js');</script>
+
 </head>
 
 <body id="bicicletas">
@@ -39,7 +43,7 @@
          <div class="bicicleta-conteudo">
             <p>A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
             <div class="bicicleta-comprar">
-               <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar agora</a>
+               <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar agora</a>
                <span>
                   <img src="../img/icones/entrega.svg">
                   entrega em 5 dias
@@ -122,9 +126,9 @@
             </ul>
 
             <div class="footer-redes">
-               <a href="www.instagram.com"><img src="./img/redes/instagram.svg" alt="instagram" width="32" height="32"></a>
-               <a href="www.facebook.com"><img src="./img/redes/facebook.svg" alt="facebook" width="32" height="32"></a>
-               <a href="www.youtube.com"><img src="./img/redes/youtube.svg" alt="youtube" width="32" height="32"></a>
+               <a href="www.instagram.com"><img src="../img/redes/instagram.svg" alt="instagram" width="32" height="32"></a>
+               <a href="www.facebook.com"><img src="../img/redes/facebook.svg" alt="facebook" width="32" height="32"></a>
+               <a href="www.youtube.com"><img src="../img/redes/youtube.svg" alt="youtube" width="32" height="32"></a>
             </div>
          </div>
          <div class="footer-info">
@@ -141,4 +145,7 @@
          <p class="direitos">Bikcraft © Alguns direitos reservados.</p>
       </div>
    </footer>
+   <script src="../js/script.js"></script>
 </body>
+
+</html>
