--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -7,10 +7,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Projeto Final</title>
    <link rel="icon" href="../favicon.svg" type="image/svg+xml">
-   <link rel="stylesheet" href="../css/main.css">
+   <link rel="stylesheet" href="../css/main.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+   <script>document.documentElement.classList.add('js');</script>
+
 </head>
 
 <body id="bicicletas">
@@ -40,7 +42,7 @@
          <div class="bicicleta-conteudo">
             <p>A A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade..</p>
             <div class="bicicleta-comprar">
-               <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar agora</a>
+               <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nebula">Comprar agora</a>
                <span>
                   <img src="../img/icones/entrega.svg">
                   entrega em 5 dias
@@ -106,7 +108,7 @@
          <div class="seguro-conteudo">
             <h2>Pedale mais tranquilo com o nosso <span class="cor-p1">seguro.</span></h2>
             <p>Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-            <a class="botao" href="../seguros.html">Conheça Mais</a>
+            <a class="botao" href="../seguro.html">Conheça Mais</a>
          </div>
       </div>
    </article>
@@ -142,4 +144,7 @@
          <p class="direitos">Bikcraft © Alguns direitos reservados.</p>
       </div>
    </footer>
+   <script src="../js/script.js"></script>
 </body>
+
+</html>
