--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+
    <title>Projeto Final</title>
+   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo a sua velocidade com a Bikcraft.">
+
    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
-   <link rel="stylesheet" href="./css/main.css">
+   <link rel="stylesheet" href="./css/main.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+   <script>document.documentElement.classList.add('js');</script>
+
 </head>
 
 <body id="home">
@@ -29,11 +35,11 @@
    <main class="intro-bg">
       <div class="container-intro container">
          <div class="intro">
-            <h1>Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-            <p class="texto1">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-            <a href="bicicleta.html" class="botao">escolha a sua </a>
+            <h1 class="fadeInLeft" data-anime="200">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+            <p class="texto1 fadeInLeft" data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+            <a href="bicicleta.html" class="botao fadeInLeft" data-anime="600">escolha a sua </a>
          </div>
-         <picture>
+         <picture class="fadeInDown" data-anime="800">
             <soucer media="(max-width:800px)" srcset="./img/bicicletas/nimbus.jpg">
                <img src="./img/fotos/introducao.jpg" alt="bicicleta preta com motor eletrico" width="640" height="800">
          </picture>
@@ -196,4 +202,8 @@
          <p class="direitos">Bikcraft © Alguns direitos reservados.</p>
       </div>
    </footer>
+   <script src="./js/plugins/simple-anime.js"></script>
+   <script src="./js/script.js"></script>
 </body>
+
+</html>
