--- a/seguro.html
+++ b/seguro.html
@@ -7,10 +7,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Projeto Final</title>
    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
-   <link rel="stylesheet" href="./css/main.css">
+   <link rel="stylesheet" href="./css/main.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+   <script>document.documentElement.classList.add('js');</script>
+
 </head>
 
 <body id="home">
@@ -35,7 +37,7 @@
          </div>
       </div>
       <div class="seguro2 container">
-         <div class="seguros2-item">
+         <div class="seguros2-item fadeInLeft" data-anime="200">
             <h3>Prata</h3>
             <span>R$ 199
                <span class="mensal">mensal</span>
@@ -46,9 +48,9 @@
                <li>Suporte 08h às 18h</li>
                <li>Corbetura estadual</li>
             </ul>
-            <a href="" class="botao secundario">Inscreva-se</a>
+            <a href="./orcamento.html?tipo=seguro&produto=prata" class="botao secundario">Inscreva-se</a>
          </div>
-         <div class="seguros2-item">
+         <div class="seguros2-item fadeInRight" data-anime="400">
             <h3 class="ouro">Ouro</h3>
             <span>R$ 299
                <span class="mensal">mensal</span>
@@ -62,7 +64,7 @@
                <li>Desconto em parceiros</li>
                <li>Acesso ao Clube Bikcraft</li>
             </ul>
-            <a href="" class="botao">Inscreva-se</a>
+            <a href="./orcamento.html?tipo=seguro&produto=ouro" class="botao">Inscreva-se</a>
          </div>
       </div>
    </main>
@@ -106,29 +108,29 @@
    <article class="perguntas container">
       <h2>perguntas frequentes<span class="cor-p1">.</span></h2>
       <dl>
-         <div class="ativa">
-            <dt>Qual forma de pagamento vocês aceitam?</dt>
-            <dd>Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+         <div>
+            <dt><button aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta1" class="ativa">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
          </div>
-         <div class="ativa">
-            <dt>Como posso entrar em contato?</dt>
-            <dd>Podem entrar em contato através de email, facebook e instagram. Mais informações no final da página</dd>
+         <div>
+            <dt><button aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+            <dd id="pergunta2">Podem entrar em contato através de email, facebook e instagram. Mais informações no final da página</dd>
          </div>
-         <div class="ativa">
-            <dt>Vocês possuem algum desconto?</dt>
-            <dd>Fazemos 10% de desconto em pagamentos à vista</dd>
+         <div>
+            <dt><button aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+            <dd id="pergunta3">Fazemos 10% de desconto em pagamentos à vista</dd>
          </div>
-         <div class="ativa">
-            <dt>Qual a garantia que possuo?</dt>
-            <dd>Nossos estoques são abastecidos semanalmente</dd>
+         <div>
+            <dt><button aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
+            <dd id="pergunta4">Nossos estoques são abastecidos semanalmente</dd>
          </div>
-         <div class="ativa">
-            <dt>Posso parcelar no boleto?</dt>
-            <dd>Infelizmente não, só parcelamos no cartão de crédito</dd>
+         <div>
+            <dt><button aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+            <dd id="pergunta5">Infelizmente não, só parcelamos no cartão de crédito</dd>
          </div>
-         <div class="ativa">
-            <dt>Quantas trocas posso fazer ao ano?</dt>
-            <dd>Duas no plano Prata e cinco no plano Ouro</dd>
+         <div>
+            <dt><button aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer ao ano?</button></dt>
+            <dd id="pergunta6">Duas no plano Prata e cinco no plano Ouro</dd>
          </div>
       </dl>
    </article>
@@ -165,4 +167,8 @@
          <p class="direitos">Bikcraft © Alguns direitos reservados.</p>
       </div>
    </footer>
+   <script src="./js/plugins/simple-anime.js"></script>
+   <script src="./js/script.js"></script>
 </body>
+
+</html>
